Make contributor icons smaller and ensure they do not overflow bottom of page

--- a/ui/src/Common/AuthTemplate/AuthTemplate.scss
+++ b/ui/src/Common/AuthTemplate/AuthTemplate.scss
@@ -19,7 +19,8 @@
 
 .auth-template {
 	display: block;
-	height: 100%;
+	height: auto;
+	min-height: 100%;
 
 	background-color: main.$white;
 
